# ccxt

./: .babelrc  .ccxt.approve.cfg  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .npmignore  .npmrc  .php-cs-fixer.dist.php  .readthedocs.yaml  .snyk  .travis-build.sh  .travis.yml  AGI33  Arun  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CN-README.md  CN-TRANSLATION  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Ccxt  Dockerfile  Dockerfile.dev  GO_BUILD_GUIDE.md  Gruntfile.js  ISSUE_TEMPLATE.md  Jenkci.io  LICENSE.txt  Mkhosanq EA  README.md  README.rst  SECURITY.md  TEST-SCRIPTS-README.md  TODO  (+197 more)
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  dependabot.yml
.taskmaster/: config.toml  workflow-state.json
Magazineiwwj/: bitcoin
agents/: web-search-researcher.md
c#/: .editorconfig  .gitignore  Program.cs  c#.csproj  ccxt.sln  output.txt
ccxt/: __init__.py  errors.py  exchange.py  exchanges.py  version.py
ccxt-proxy-error-main/: package-lock.json  package.json
ccxtpro/: .gitattributes  .gitignore  .npmignore  README.md  ccxt.pro.browser.js  ccxtpro.php  cleanup.sh  composer.json  exchanges.cfg  package.json  run-tests.js  server.js
cli/: .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json
cpp/: CMakeLists.txt  binance.cpp  binance.h  httpsClass.cpp  httpsClass.h  url.cpp  url.h
cpp/ccxt/async/base/: exchange.cpp
cpp/ccxt/base/: errors.h  exchange.cpp  exchange.h
cpp/ccxt/base/functions/: generic.cpp  generic.h  string.cpp  string.h  throttle.cpp  throttle.h  time.cpp  time.h  type.cpp  type.h
cpp/test/: CMakeLists.txt  TestBinance.cpp  doctest.h  run-tests.cpp  test.cpp
cpp/test/base/: CMakeLists.txt  TestErrors.cpp  TestExchange.cpp
cpp/test/base/functions/: TestString.cpp  TestThrottle.cpp  TestType.cpp
cpp/test/regression/: CMakeLists.txt  RegTestBinance.cpp  TestBinance.cpp
cpp/test/unit/: CMakeLists.txt  TestBinance.cpp  run-tests.cpp  test.cpp
cpp/test/unit/base/: CMakeLists.txt  TestErrors.cpp  TestExchange.cpp  main.cpp
cpp/test/unit/base/functions/: TestGeneric.cpp  TestString.cpp  TestThrottle.cpp  TestType.cpp
cs/: .gitignore  (+3 more)
examples/rust/: Cargo.toml
examples/rust/src/: bench_parse_markets.rs  binance_basics.rs  binance_typed.rs  cli.rs  exchanges_smoke.rs
rust/ccxt/: Cargo.toml  README.md
rust/ccxt/src/: error.rs  exchange.rs  exchange_errors.rs  exchange_generated.rs  exchange_stubs.rs  lib.rs  precise.rs  prediction_exchange.rs  prediction_exchange_generated.rs  runtime.rs  typed.rs  types.rs  value.rs
rust/ccxt/src/exchanges/: aftermath.rs  aftermath_api.rs  aftermath_typed.rs  alpaca.rs  alpaca_api.rs  alpaca_typed.rs  apex.rs  apex_api.rs  apex_typed.rs  arkham.rs  arkham_api.rs  arkham_typed.rs  ascendex.rs  ascendex_api.rs  ascendex_typed.rs  aster.rs  aster_api.rs  aster_typed.rs  backpack.rs  backpack_api.rs  backpack_typed.rs  bequant.rs  bequant_api.rs  bequant_typed.rs  bigone.rs  bigone_api.rs  bigone_typed.rs  binance.rs  binance_api.rs  binance_typed.rs  binancecoinm.rs  binancecoinm_api.rs  binancecoinm_typed.rs  binanceus.rs  binanceus_api.rs  binanceus_typed.rs  binanceusdm.rs  binanceusdm_api.rs  binanceusdm_typed.rs  bingx.rs  (+306 more)
rust/ccxt/src/prediction/: hyperliquid.rs  kalshi.rs  kalshi_api.rs  limitless.rs  limitless_api.rs  mod.rs  myriad.rs  myriad_api.rs  polymarket.rs  polymarket_api.rs
rust/ccxt/src/pro/: aftermath.rs  alpaca.rs  apex.rs  arkham.rs  ascendex.rs  aster.rs  backpack.rs  bequant.rs  binance.rs  binancecoinm.rs  binanceus.rs  binanceusdm.rs  bingx.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmart.rs  bitmex.rs  bitopro.rs  bitrue.rs  bitstamp.rs  bittrade.rs  bitvavo.rs  blockchaincom.rs  blofin.rs  bullish.rs  bybit.rs  bybiteu.rs  bydfi.rs  cache.rs  cex.rs  coinbase.rs  coinbaseadvanced.rs  coinbaseexchange.rs  coinbaseinternational.rs  coincheck.rs  coinex.rs  coinone.rs  cryptocom.rs  deepcoin.rs  (+47 more)
rust/tests/: Cargo.toml
rust/tests/base/: mod.rs  test.afterConstructor.rs  test.aggregate.rs  test.arrayConcat.rs  test.arraysConcat.rs  test.base16ToBinary.rs  test.base58ToBinary.rs  test.base64ToBinary.rs  test.binaryConcat.rs  test.binaryToBase16.rs  test.binaryToBase58.rs  test.binaryToBase64.rs  test.capitalize.rs  test.clone.rs  test.constants.rs  test.cryptography.rs  test.datetime.rs  test.decimalToPrecision.rs  test.deepExtend.rs  test.encodeDecode.rs  test.ethMethods.rs  test.extend.rs  test.extractParams.rs  test.fetchHistory.rs  test.filterBy.rs  test.groupBy.rs  test.handleMethods.rs  test.implodeParams.rs  test.inArray.rs  test.indexBy.rs  test.io.rs  test.isEmpty.rs  test.isJsonEncodedObject.rs  test.json.rs  test.keysort.rs  test.networkMethods.rs  test.numberToBE.rs  test.numberToString.rs  test.omit.rs  test.parsePrecision.rs  (+23 more)
rust/tests/base_ws/: mod.rs  test.cache.rs  test.close.rs  test.orderBook.rs
rust/tests/exchange/: mod.rs  test.account.rs  test.afterConstruct.rs  test.balance.rs  test.borrowInterest.rs  test.borrowRate.rs  test.createOrder.rs  test.currency.rs  test.depositWithdrawal.rs  test.features.rs  test.fetchAccounts.rs  test.fetchBalance.rs  test.fetchBorrowInterest.rs  test.fetchClosedOrders.rs  test.fetchCurrencies.rs  test.fetchDepositWithdrawals.rs  test.fetchDeposits.rs  test.fetchFundingRateHistory.rs  test.fetchL2OrderBook.rs  test.fetchLastPrices.rs  test.fetchLedger.rs  test.fetchLedgerEntry.rs  test.fetchLeverageTiers.rs  test.fetchLiquidations.rs  test.fetchMarginMode.rs  test.fetchMarginModes.rs  test.fetchMarketLeverageTiers.rs  test.fetchMarkets.rs  test.fetchMyLiquidations.rs  test.fetchMyTrades.rs  test.fetchOHLCV.rs  test.fetchOpenInterestHistory.rs  test.fetchOpenOrders.rs  test.fetchOrderBook.rs  test.fetchOrderBooks.rs  test.fetchOrders.rs  test.fetchPositions.rs  test.fetchStatus.rs  test.fetchTicker.rs  test.fetchTickers.rs  (+27 more)
rust/tests/src/: assertions.rs  base_tests.rs  fixtures.rs  language_specific.rs  live_dispatch.rs  main.rs  pro_test_helpers.rs  registry.rs  test_helpers.rs  tests.rs  tests_support.rs
(+22824 files in other folders)
