[build-system]
requires = ["setuptools>=60.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccxt"
version = "4.5.62"
description = "A cryptocurrency trading API with more than 100 exchanges in JavaScript / TypeScript / Python / C# / PHP / Go"
readme = "python/README.md"
license = { text = "MIT" }
authors = [
    { name = "Igor Kroitor", email = "igor.kroitor@gmail.com" },
]
requires-python = ">=3.7"
keywords = [
    "algorithmic", "algotrading", "altcoin", "altcoins", "api", "arbitrage", "backtest", "backtesting", "bitcoin", "bot",
    "btc", "crypto", "cryptocurrency", "crypto currency", "crypto market", "currency", "currencies", "darkcoin",
    "dash", "digital currency", "doge", "dogecoin", "e-commerce", "etc", "eth", "ether", "ethereum", "exchange",
    "exchanges", "eur", "framework", "invest", "investing", "investor", "library", "light", "litecoin", "ltc",
    "market", "market data", "markets", "merchandise", "merchant", "minimal", "ohlcv", "order", "orderbook",
    "order book", "price", "price data", "pricefeed", "private", "public", "ripple", "strategy", "ticker",
    "tickers", "toolkit", "trade", "trader", "trading", "usd", "volume", "websocket", "websockets",
    "web socket", "web sockets", "ws", "xbt", "xrp", "zec", "zerocoin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: JavaScript",
    "Programming Language :: PHP",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "setuptools>=60.9.0",
    "certifi>=2018.1.18",
    "requests>=2.18.4",
    "cryptography>=2.6.1",
    "typing_extensions>=4.4.0",
    "aiohttp>=3.10.11; python_version >= \"3.5.2\"",
    "aiodns>=1.1.1; python_version >= \"3.5.2\"",
    "yarl>=1.7.2; python_version >= \"3.5.2\"",
    "coincurve==21.0.0; python_version >= \"3.9\" and python_version <= \"3.13\"",
]

[project.optional-dependencies]
qa = [
    "ruff==0.0.292",
    "tox>=4.8.0",
]
type = [
    "mypy==1.6.1",
]
dev = [
    "setuptools>=60.9.0",
    "certifi>=2018.1.18",
    "requests>=2.18.4",
    "cryptography>=2.6.1",
    "typing_extensions>=4.4.0",
    "aiohttp>=3.10.11",
    "aiodns>=1.1.1",
    "yarl>=1.7.2",
    "ruff==0.0.292",
    "tox>=4.8.0",
    "mypy==1.6.1",
]

[project.urls]
Homepage = "https://ccxt.com"
Documentation = "https://github.com/ccxt/ccxt/wiki"
Discord = "https://discord.gg/ccxt"
Twitter = "https://twitter.com/ccxt_official"
Funding = "https://opencollective.com/ccxt"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
ccxt = [
    "static_dependencies/mnemonic/wordlist/**/*",
    "static_dependencies/dydx_v4_client/**/*",
    "static_dependencies/lighter_client/*",
]

[tool.ruff]
preview = true
select = ["W", "F", "E"]
ignore = ["F722", "F841", "F821", "E402", "E501", "E902", "E713", "E741", "E714", "E275", "E721"]

exclude = [
    "static_dependencies",
    "protobuf",
]
